# curtube

./: .gitingore  LICENSE  README.md  curtubemodule.py  pyproject.toml  test.py  user_data.db  user_data.pkl
script/: api_example.py  curtubemodule.py  fonts.css  getvideo.py  index.html  pyscript.json  server.py  signin.html  test.py
script/modules/: curtubemodule.py
src/Curtube/: curtubemodule.py
src/curtube.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py
