[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "curtube"
version = "1.0"
authors = [
  { name="Curtis Yung", email="curtisyung1022@gmail.com" },
]
description = "A package for the FYSC called CurTube"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENCSE"]

[project.urls]
Homepage = "https://github.com/yung1022/curtube"
Issues = "https://github.com/yung1022/curtube/issues"
